src/test/deca/context/valid/classes/tests-FH/local_var_ok.deca
class A {
    int f() {
        int x = 3;
        return x;
    }
}

{
}
