src/test/deca/context/invalid/avecObjet/assign_to_final_field.deca
// Description :
// test affectation à un champ final
//
// Resultats :
//    Erreur contextuelle
//    Ligne 11 : Affectation à un champ final 'x' interdite

class A {
    final int x;
    void f() {
        x = 10; // Doit être refusé
    }
}
